<resources>
    <string name="app_name">Service Development</string>
    //Baby Sitter
    <string name="bname">Aloka Athapaththu</string>
    <string name="bage">32yrs</string>
    <string name="bgender">Female</string>
    <string name="bcontact">077456879</string>
    <string name="bAvailability">Available</string>
    <string name="bhourlyRate">Rs.300.00</string>
    <string name="bdesc">2 year experience</string>


    //Dog Walker
    <string name="dname">Nilu Athapaththu</string>
    <string name="dage">32yrs</string>
    <string name="dgender">Female</string>
    <string name="dcontact">077456879</string>
    <string name="dAvailability">Available</string>
    <string name="dhourlyRate">Rs.300.00</string>
    <string name="ddesc">5 year experience</string>


    //House Cleaner
    <string name="hname">Namal Athapaththu</string>
    <string name="hage">32yrs</string>
    <string name="hgender">Female</string>
    <string name="hcontact">077456879</string>
    <string name="hAvailability">Available</string>
    <string name="hhourlyRate">Rs.300.00</string>
    <string name="hdesc">3 year experience</string>


    <string name="hourlyRate">Hourly Rate</string>
    <string name="services">Our Services</string>

    <string name="bookingBtn">Confirm</string>


    //intial Page
    <string name="welcome">WELCOME TO SERVICE DEV..</string>
    <string name="start">Get Started</string>
    <string name="signin">Sign In</string>

    //edit booking
    <string name="editBooking">Edit My Booking</string>


    //Add Booking
    <string name="booking">BOOKING</string>
    <string name="Bdate">Date of Booking</string>
    <string name="Bhrs">Booking Hours</string>
    <string name="Baddr">Address</string>
    <string name="Bphn">Phone Number</string>
    <string name="Bbookdesc">Description</string>
    <string name="Btotal">Total Amount</string>

    <string name="BphEdit">07XXXXXXXX</string>
    <string name="BeditDate">3/17/2023</string>
    <string name="BhrsEdit">8</string>
    <string name="Baddrfill">111,Flower Road</string>
    <string name="Bbookdescfill">Add description</string>
    <string name="BgenerateTotal">Rs.XXXXX.XX</string>

    <string name="cancelbtn">CANCEL</string>
    <string name="Badd">ADD</string>

    //confirm booking
    <string name="confirmB">CONFIRM BOOKING</string>
    <string name="Cservicedata">Service Details</string>
    <string name="CbookingData">Booking Details</string>
    <string name="Ctitle">Servise Title</string>
    <string name="Cname">Service Provider Name</string>
    <string name="editBtn">EDIT</string>
    <string name="deletebtn">DELETE</string>
    <string name="confirmBtn">CONFIRM</string>


    //Detailed retrive
    <string name="Dname">Name:</string>
    <string name="DAge">Age:</string>
    <string name="Dgender">Gender:</string>
    <string name="Dcontact">Contact No.:</string>
    <string name="Dava">Avalability:</string>
    <string name="DHrate">Hourly Rate:</string>
    <string name="Ddesc">Description:</string>
    <string name="bookNow">BOOK NOW</string>
    <string name="updatebtn">UPDATE</string>
    <string name="feedback">FEEDBACK</string>
    <string name="idea">Your Ideas</string>
    <string name="fb">FaceBook</string>
    <string name="google">Google</string>
    <string name="welcome1">WELCOME BACK</string>
    <string name="Uname">User Name : </string>
    <string name="pw">Password :</string>
    <string name="or">or login With</string>
    <string name="reg">REGISTER</string>
    <string name="name">Name</string>
    <string name="mail">"Email "</string>
    <string name="contact">Contact No.</string>
    <string name="uname">User Name</string>
    <string name="pw1">Password</string>
    <string name="rpwd">"Re-Enter Password "</string>
    <string name="signup">SIGN UP</string>
    <string name="wishlist">WISH LIST</string>
    <string name="hello">Hello</string>
    <string name="mybook">My Booking</string>
    <string name="myservice">My Services</string>
    <string name="servicenoti">Service Notification</string>
    <string name="wish">Wish List</string>
    <string name="Feedb">Feedback</string>
    <string name="pro">Profile</string>
    <string name="descmain">You can easily book and get a service</string>
    <string name="mybooking">My Booking</string>
    <string name="BbookservName">Service Name</string>
    <string name="BbookserNamefill">Add Service Title</string>
    <string name="bookid">Booking ID</string>
    <string name="bookid1">Booking ID</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    //

    <string name="text1">Payment Successful</string>
    <string name="btn_1">Continue</string>
    <string name="Amount">Total Amount:</string>
    <string name="hours">Hours:</string>
    <string name="date">Date:</string>
    <string name="btn_back">Back</string>
    <string name="btn_add">Add to wishlist</string>
    <string name="btn_pay">Pay Now</string>
    <string name="pay">PAYMENT</string>
    <string name="cardno">Card Number</string>
    <string name="m" />
    <string name="month">Expiration month</string>
    <string name="yearno">Expiration year</string>
    <string name="cvn">"cvn "</string>
    <string name="btn_cansel">Cancel</string>
    <string name="btn_now">Pay</string>
    <string name="success">Payment Successful</string>
    <string name="message">Thank you for your payment.</string>


    <string name="pro_name">Laura Steveson</string>
    <string name="history">My ooking List</string>
    <string name="request">Service Notifications</string>
    <string name="sev_name">Amily watson</string>
    <string name="msg">You have received 2 new requests.</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_save">Want to save bank details.</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="payDetails">Payment Details</string>
    <string name="btn_acc">Accept</string>
    <string name="new_msg">Amily wotson accepted your request.</string>
    <string name="btn_ready">Accepted</string>
    <string name="btn_pending">Pending</string>
    <string name="btn_call">Call</string>
    <string name="btn_all">Delete All</string>
    <string name="text_pay">Payment</string>
    <string name="service">Service Charge</string>


    //
    <string name="AddService">Add Your Service</string>
    <string name="Hello">Hello</string>

    <string name="Servicetitle">Service Title</string>
    <string name="NIC">NIC</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Address">Address</string>
    <string name="HourlyRate">Hourly Rate</string>
    <string name="Availability">Availability</string>
    <string name="Description">Description</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>


    //Baby Sitter
    <string name="sitterTitle">Baby Sitter</string>
    <string name="sitterNic">769976568V</string>
    <string name="sitterage">49</string>
    <string name="sitterGenderr">dropDownMenu</string>
    <string-array name="genderr">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="sitterAvaliabili">dropDownMenu</string>
    <string-array name="Availabili">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="AddServices">dropDownMenu</string>
    <string-array name="Title">
        <item>Baby Sitter</item>
        <item>Dog walker</item>
        <item>House Cleaner</item>
    </string-array>

    <string name="sitteraddress">No99, Malabe, Colombo</string>
    <string name="sitterrate">Rs.350.00</string>
    <string name="sitterdescription">2 year experience</string>

    <string name="Myservices">My Services</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="babysitter">Baby Sitter</string>
    <string name="dogwalker">Dog Walker</string>
    <string name="Housecleaner">House Cleaner</string>

    <string name="editservices">Edit My Services</string>
    <string name="Update">Update</string>


</resources>