<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".editBookingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:background="@drawable/botom_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button7"
            android:layout_width="115dp"
            android:layout_height="49dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/button_back"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/cancelbtn"
            android:textColor="@color/white"
            android:textSize="@dimen/btnSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="123dp"
            android:layout_height="51dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_back"
            android:backgroundTint="@color/maroon1"
            android:text="@string/updatebtn"
            android:textColor="@color/white"
            android:textSize="@dimen/btnSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="467dp"
        android:background="@drawable/bar"
        android:padding="@dimen/titlePadding"
        android:text="@string/editBooking"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#030903"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView3" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@drawable/white_logpanel"
            android:orientation="vertical"
            android:paddingRight="5dp"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/bookhrs"
                    android:layout_width="135dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/Bhrs"
                    android:textAllCaps="false"
                    android:textColor="#030903"
                    android:textSize="@dimen/Bdata"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/BhrsEdit"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="135dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/Bdate"
                    android:textColor="#030903"
                    android:textSize="@dimen/Bdata"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="167dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/BeditDate"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/addr"
                    android:layout_width="135dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/Baddr"
                    android:textColor="#030903"
                    android:textSize="@dimen/Bdata"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addrfill"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Baddrfill"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/phn"
                    android:layout_width="135dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/Bphn"
                    android:textColor="#030903"
                    android:textSize="@dimen/Bdata"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/BphEdit"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/bookdesc"
                    android:layout_width="135dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/Bbookdesc"
                    android:textColor="#030903"
                    android:textSize="@dimen/Bdata"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/bookdescfill"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Bbookdescfill"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>