<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.paymentSuccessActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="401dp"
            android:layout_height="116dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/top_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="331dp"
            android:layout_height="71dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/white_background_1"
            android:elevation="3dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/pay"
                android:textAlignment="center"
                android:textColor="#0B0909"
                android:textSize="34sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/yearno"
        android:layout_width="368dp"
        android:layout_height="363dp"
        android:background="@drawable/white_logpanel"
        android:orientation="vertical"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="232dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/t1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="288dp"
                android:layout_height="176dp"
                app:srcCompat="@drawable/s2" />

        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="311dp"
            android:layout_height="53dp"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="#040303"
            android:textSize="@dimen/pay_message"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="137dp"
        android:layout_height="51dp"
        android:backgroundTint="#134A0A"
        android:text="@string/btn_back"
        android:textSize="@dimen/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="197dp"
        android:layout_height="55dp"
        android:text="@string/btn_save"
        android:textSize="@dimen/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_back"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>